update from merge