@@ -6,9 +6,12 @@ import com.saturne.redwire.entities.Session;
 import com.saturne.redwire.services.CatalogueService;
 import com.saturne.redwire.services.FormationService;
 import com.saturne.redwire.services.SessionService;
+
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,12 +19,16 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.ComponentScan;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 @SpringBootApplication
 public class RedWireBackendApplication {
+
+    @Autowired
+    private FormationService formationService;
 
     private static final Logger log = LoggerFactory.getLogger(RedWireBackendApplication.class);
 
@@ -127,8 +134,7 @@ public class RedWireBackendApplication {
             s.setFormation(f1);
             s1.setFormation(f2);
             s2.setFormation(f2);
-
-            sessionService.saveAll(List.of(s, s1, s2));
+            sessionService.saveAll(Arrays.asList(s, s1, s2));
             log.info("");
         };
     }
@@ -170,38 +176,5 @@ public class RedWireBackendApplication {
         UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
         urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
         return new CorsFilter(urlBasedCorsConfigurationSource);
-        /*
-        CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowCredentials(true);
-        corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
-        corsConfiguration.setAllowedHeaders(
-            Arrays.asList(
-                "Origin",
-                "Access-Control-Allow-Origin",
-                "Content-Type",
-                "Accept",
-                "Authorization",
-                "Origin, Accept",
-                "X-Requested-With",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers"
-            )
-        );
-        corsConfiguration.setExposedHeaders(
-            Arrays.asList(
-                "Origin",
-                "Content-Type",
-                "Accept",
-                "Authorization",
-                "Access-Control-Allow-Origin",
-                "Access-Control-Allow-Origin",
-                "Access-Control-Allow-Credentials"
-            )
-        );
-        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
-        urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
-        return new CorsFilter(urlBasedCorsConfigurationSource);
-        */
     }
 }
